<resources>
    <string name="app_name">Chibraxamax</string>
    <string name="play">Jouer</string>
    <string name="tournament">Tournoi</string>
    <string name="param">Paramètre</string>
    <string name="default_score">2500</string>
    <string name="default_name_team0">Équipe 1</string>
    <string name="default_name_team1">Équipe 2</string>
    <string name="default_team_score">0</string>
    <string name="add_button">+</string>
    <string name="guide_description">Guide</string>
    <string name="default_rest">0</string>
    <string name="empty"></string>
    <string name="add_title_without_name">Ajout de points à</string>
    <string name="end_score_popup_score">Score</string>
    <string name="end_score_popup_message">Changer le score final:</string>
    <string name="param_title">Paramètres</string>
    <string name="right_arrow"></string>
    <string name="param_big_score">Afficher score en grand</string>
    <string name="param_touch_points">Ajouter points en touchant l\'écran</string>
    <string name="historic_title">Historique</string>
    <string name="historic_reinitialise">Réinitialiser</string>
    <string name="historic"></string>
    <string name="prameter"></string>
    <string name="save">Sauvegarder</string>
    <string name="param_guide">Afficher les guides (Z)</string>
    <string name="param_marks">Afficher les marques</string>
    <string name="cie_name"><![CDATA[Truc&Muche]]></string>
    <string name="cie_sign"><![CDATA[- Truc&Muche -]]></string>
    <string name="cross"> </string>
    <string name="stat_title">Statistiques</string>
    <string name="announce_title">Annonces</string>
    <string name="param_touch_announce">Les points attribués en touchant l\'écran sont des annonces</string>
    <string name="restart_message">Une partie était en cours lors de la dernière utilisation de l\'application:</string>
    <string name="new_game">Nouvelle Partie</string>
    <string name="continue_game">Continuer</string>
</resources>
