<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/add_popup_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/popup_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/popup_primary_top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/param_back"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/font_awesome_5"
            android:text="@string/right_arrow"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/historic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/historic_title"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/historic_reinitialise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:padding="15dp"
        android:gravity="center"
        android:text="@string/historic_reinitialise"
        android:textAllCaps="false"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_primary" />



</LinearLayout>