<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context=".controller.RestartGameActivity">

    <TextView
        android:id="@+id/restart_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/restart_message"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <View
        android:id="@+id/line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/saved_team1_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restart_message" />

    <TextView
        android:id="@+id/saved_team0_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="5dp"
        android:text="@string/default_name_team0"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line" />

    <TextView
        android:id="@+id/saved_team0_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="157"
        android:textSize="20sp"
        android:fontFamily="@font/adam_bold"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/saved_team0_name"
        app:layout_constraintStart_toStartOf="@+id/saved_team0_name"
        app:layout_constraintTop_toBottomOf="@+id/saved_team0_name" />

    <TextView
        android:id="@+id/saved_team1_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="5dp"
        android:text="@string/default_name_team1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/line"
        app:layout_constraintTop_toTopOf="@+id/line" />

    <TextView
        android:id="@+id/saved_team1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="157"
        android:textSize="20sp"
        android:fontFamily="@font/adam_bold"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/saved_team1_name"
        app:layout_constraintStart_toStartOf="@+id/saved_team1_name"
        app:layout_constraintTop_toBottomOf="@+id/saved_team1_name" />


    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/button_primary_dark"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saved_team0_score"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/continue_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_game"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:padding="8dp"
        android:background="@drawable/button_primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/saved_team1_score"
        app:layout_constraintVertical_bias="0.25"  />

</androidx.constraintlayout.widget.ConstraintLayout>